# MultiRAG_routing

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
notebooks/: IndividualRAG1.ipynb
scripts/: build_rag_artifacts.py  demo.py  demo_streamlit.py  register_two_rags.py  test_route_and_retrieve.py  test_routing_only.py
services/registry_api/app/: db.py  main.py  models.py  schemas.py
src/multirag/: __init__.py  answer.py  artifact_retriever.py  artifacts.py  indexing.py  ingestion.py  metadata_generate.py  registry_client.py  route_select.py  routing.py  runtime.py
src/multirag_router.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_imports.py  test_metadata_generate.py  test_registry_api_metadata.py
