[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multirag-router"
version = "0.1.0"
description = "Multi-RAG registry + semantic routing demo (Colab-friendly)."
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]
